[metadata]
name = pyspyce
version = 0.0.1.aN
author = Anshuk Attri
author_email = dev@anshukattri.in
description = A python based astrodynamics toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aa-tree/spyce
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
